database configuration done/sample data was added
